@@ -1,0 +1,40 @@
+# Copyright 2008, 2010 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# This tests for evaluation of functions in the form of
+# complex expressions.
+
+set testfile fpointer
+set srcfile ${testfile}.cc
+if { [prepare_for_testing ${testfile}.exp ${testfile} ${srcfile} {debug c++}] } {
+     return -1
+}
+
+if ![runto_main] then {
+    perror "couldn't run to breakpoint main"
+    continue
+}
+
+# Test that function calls done through function pointers
+gdb_test "p p1()" "= 11"
+gdb_test "p p2()" "= 12"
+
+gdb_test {p p[0]()} "= 11"
+gdb_test {p p[1]()} "= 12"
+
+# Test that overload resolution is not performed for function
+# pointers.
+gdb_test "p p3('a')" "= 13"
+gdb_test "p p4(1)"   "= 14"
